@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/conf.php.dist,v 1.91 2002/01/20 22:26:55 rossigee Exp $
+ * $Header: /cvsroot/nocc/nocc/webmail/conf.php.dist,v 1.92 2002/02/09 18:55:02 rossigee Exp $
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -62,6 +62,9 @@ $conf->domains[0]->smtp_port = 25;
 //$conf->domains[2]->in = '';
 //$conf->domains[2]->smtp = '';
 //$conf->domains[2]->smtp_port = 25;
+
+// Is the user allowed to change his "From:" address? (true/false)
+$allow_address_change = true;
 
 // Default tmp directory (where to store temporary uploaded files)
 // This should be something like '/tmp' on Unix System
